src/styles/style.css
body {
  font-family: Futura, sans-serif;
}

/* Font Awesome icons */

i {
  font-size: 1.5em;
}

/* Header styles */

.header-container {
  padding: 25px;
}

.social-and-nav i {
  padding-left: 15px;
  padding-right: 0px;
}

.social-links {
  padding: 0px;
}

#hamburger-menu {
  float: right;
  padding-right: 15px;
}

#illustrator-name {
  -webkit-margin-after: 0;
}

#header-subtitle {
  -webkit-margin-before: 0;
}

@media(min-width: 768px) and (orientation: landscape) {
  #hamburger-menu {
    visibility: hidden;
  }
}

